src/tests/cases/snapshots/excise__tests__cases__ui__delete_folder_small_window_no_confirmation-5.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_t[...]_confirmation  ◆ COMPLETE        
 allocated #.#K   reclaim #.#K   apparent 8.0K   2 entries  
────────────────────────────────────────────────────────────
┌ LIST ────────────────────────────────────────────────────┐
│   file2                                4.0K   50.0%      │
│   file3                                4.0K   50.0%      │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│ ╔ ! DELETION RESULT · PRECISE ═════════════════════════╗ │
│ ║                                                      ║ │
│ ║deleted       2                                       ║ │
│ ║changed       0                                       ║ │
│ ║missing       0                                       ║ │
│ ║failed        0                                       ║ │
│ ║unattempted   0                                       ║ │
│ ║                                                      ║ │
│ ║Result is precise. [Enter/Esc] close                  ║ │
│ ║                                                      ║ │
│ ║                                                      ║ │
│ ║                                                      ║ │
│ ║                                                      ║ │
│ ║                                                      ║ │
│ ╚══════════════════════════════════════════════════════╝ │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
 arrows move  Enter open  Backspace delete  ? help          
Excise · ! REDUCED DELETE GUARD · REDUCED MOTION
