src/tests/cases/snapshots/excise__tests__cases__ui__delete_folder_with_multiple_children-2.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/delete_folder_with_multiple_children  ◆ COMPLETE                                                                                                                   
 allocated ##.#K   reclaim ##.#K   apparent 44.0K   7 entries                                                                                                                                 
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ STORAGE MAP ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ INSPECT ─────────────────────────┐
│┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────┬────────────────────────────────────────┤│file1                             │
││██████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                        ││◆ COMPLETE · file                 │
││██████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                        ││allocated ##.#K                   │
││██████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                        ││reclaim   ##.#K                   │
││██████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                        ││apparent 16.0K · entries 0        │
││██████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                        ││identity  Inode[...]ber: ######## │
││██████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                        ││}                                 │
││██████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                        ││links     1 · s[...]              │
││██████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                        ││materialized                      │
││██████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                        ││                                  │
││████████████████████████████████████████████████████file1█████████████████████████████████████████████████████│                                        ││                                  │
││██████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                        ││                                  │
││█████████████████████████████████████████████████16.0K (36%)██████████████████████████████████████████████████│                                        ││                                  │
││██████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                        ││                                  │
││██████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                        ││                                  │
││██████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                        ││                                  │
││██████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                        ││                                  │
││██████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                        ││                                  │
││██████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                        ││                                  │
││██████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                        ││                                  │
││██████████████████████████████████████████████████████████████████████████████████████████████████████████████│      subfolder1/ (+4 descendants)      ││                                  │
││██████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                        ││                                  │
│├──────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                                        ││                                  │
││                                                                                                              │              12.0K (27%)               ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                    file2                                                     │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                 16.0K (36%)                                                  │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
└┴──────────────────────────────────────────────────────────────────────────────────────────────────────────────┴────────────────────────────────────────┘└──────────────────────────────────┘
 / filter  arrows/Vim move  Enter open/rescan  Backspace delete  ? help  mem 96.0M/384.0M                                                                                                     
Excise · REDUCED MOTION
